Update ServerPlayNetworkHandlerMixin.java